[tool.poetry]
name = "ETS_backend"
version = "0.1.0"
description = ""
authors = ["c4chula <henry.foster71@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
beanie = "^1.23.0"
sqladmin = "^0.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.0"
pytest = "^7.4.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
